# TerDimension

./: CMakeLists.txt  README.md  callgrind.out.23268  gmon.out
assets/: monke.mtl
assets/peachscastle/: peachscastle.mtl
assets/spaceship/: spaceship.mtl
src/: example_meshes.h  example_raymarching.h  example_shaders.h  fast_obj.h  main.c  td_color.h  td_input.h  td_math.h  td_raster.h  td_texture.h  td_time.h  terdimension.h
src/TD/: td_color.h  td_definitions.h  td_input.c  td_input.h  td_math.c  td_math.h  td_obj.c  td_obj.h  td_raster.c  td_raster.h  td_render.c  td_render.h  td_texture.c  td_texture.h  td_time.c  td_time.h  terdimension.c  terdimension.h
